Bug 263546 - [WebGPU] Queue::writeTexture is not implemented correctly for compressed texture formats
Summary: [WebGPU] Queue::writeTexture is not implemented correctly for compressed text...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-10-23 13:12 PDT by Mike Wyrzykowski
Modified: 2023-11-12 22:44 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Wyrzykowski 2023-10-23 13:12:12 PDT
[WebGPU] Queue::writeTexture is not implemented correctly for compressed texture formats
Comment 1 Radar WebKit Bug Importer 2023-10-23 13:12:32 PDT
<rdar://problem/117368535>
Comment 2 Mike Wyrzykowski 2023-11-10 21:31:04 PST
Pull request: https://github.com/WebKit/WebKit/pull/20358
Comment 3 EWS 2023-11-12 22:44:33 PST
Committed 270623@main (53c6f57a22b2): <https://commits.webkit.org/270623@main>

Reviewed commits have been landed. Closing PR #20358 and removing active labels.