[WebGPU] Queue::writeTexture is not implemented correctly for compressed texture formats https://bugs.webkit.org/show_bug.cgi?id=263546 rdar://117368535

Reviewed by Dan Glastonbury.

webgpu:api,operation,command_buffer,* passes locally after
fixing this bug but the test times out run via WKTR so no
expectations are added.

* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::writeTexture):

Canonical link: https://commits.webkit.org/270623@main